# fluence-cdb-provider

./: .gitignore  README.md  fluence-lock.yaml  fluence.yaml
aqua/: composedb.aqua  types.aqua
composedb_adapter/: Cargo.toml  module.yaml
composedb_adapter/src/: cmds.rs  main.rs
curl_adapter/: module.yaml
curl_adapter/src/: main.rs
ipfs_adapter/: Cargo.toml  module.yaml
ipfs_adapter/src/: helpers.rs  kubo.rs  main.rs
src/aqua/: export.aqua
tu_cdb_provider/: service.yaml
tu_cdb_provider/modules/config/: Cargo.toml  module.yaml
tu_cdb_provider/modules/config/src/: config.rs  helpers.rs  main.rs
tu_cdb_provider/modules/facade/: Cargo.toml  module.yaml
tu_cdb_provider/modules/facade/src/: main.rs
tu_cdb_provider/modules/index/: Cargo.toml  module.yaml
tu_cdb_provider/modules/index/src/: graphql.rs  helpers.rs  index.rs  main.rs
tu_cdb_provider/types/: Cargo.toml  index.rs  lib.rs  provider.rs
