[package]
name = "index"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "index"
path = "src/main.rs"

[dependencies]
tu_cdb_types = { path = "/home/joera/Documents/transport-union/fluence_composedb/fluence/tu_cdb_provider/types" }
marine-rs-sdk = "0.7.1"
serde_json = "1.0.91"

[dev-dependencies]
marine-rs-sdk-test = "0.8.1"
